syntax = "proto3";

option csharp_namespace = "Backed.Grpc";

package rbac;

// RBAC service definition
service RBACService {
  // User operations
  rpc AuthenticateUser (AuthenticateUserRequest) returns (AuthenticateUserResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse);
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
  
  // Role operations
  rpc GetRole (GetRoleRequest) returns (GetRoleResponse);
  rpc GetAllRoles (GetAllRolesRequest) returns (GetAllRolesResponse);
  rpc CreateRole (CreateRoleRequest) returns (CreateRoleResponse);
  rpc UpdateRole (UpdateRoleRequest) returns (UpdateRoleResponse);
  rpc DeleteRole (DeleteRoleRequest) returns (DeleteRoleResponse);
  rpc GetRolePermissions (GetRolePermissionsRequest) returns (GetRolePermissionsResponse);
  rpc AssignPermissionToRole (AssignPermissionToRoleRequest) returns (AssignPermissionToRoleResponse);
  rpc RemovePermissionFromRole (RemovePermissionFromRoleRequest) returns (RemovePermissionFromRoleResponse);
  
  // Permission operations
  rpc GetPermission (GetPermissionRequest) returns (GetPermissionResponse);
  rpc GetAllPermissions (GetAllPermissionsRequest) returns (GetAllPermissionsResponse);
  rpc CreatePermission (CreatePermissionRequest) returns (CreatePermissionResponse);
  rpc UpdatePermission (UpdatePermissionRequest) returns (UpdatePermissionResponse);
  rpc DeletePermission (DeletePermissionRequest) returns (DeletePermissionResponse);
  
  // User-role operations
  rpc GetUserRoles (GetUserRolesRequest) returns (GetUserRolesResponse);
  rpc GetUserPermissions (GetUserPermissionsRequest) returns (GetUserPermissionsResponse);
}

// User messages
message User {
  int32 id = 1;
  string username = 2;
  string email = 3;
  bool is_active = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

// Role messages
message Role {
  int32 id = 1;
  string name = 2;
  string description = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
}

// Permission messages
message Permission {
  int32 id = 1;
  string name = 2;
  string description = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
}

// AuthenticateUser
message AuthenticateUserRequest {
  string username = 1;
  string password = 2;
}

message AuthenticateUserResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}

// GetUser
message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}

// GetAllUsers
message GetAllUsersRequest {}

message GetAllUsersResponse {
  bool success = 1;
  string message = 2;
  repeated User users = 3;
}

// CreateUser
message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message CreateUserResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}

// UpdateUser
message UpdateUserRequest {
  User user = 1;
}

message UpdateUserResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}

// DeleteUser
message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

// GetRole
message GetRoleRequest {
  int32 id = 1;
}

message GetRoleResponse {
  bool success = 1;
  string message = 2;
  Role role = 3;
}

// GetAllRoles
message GetAllRolesRequest {}

message GetAllRolesResponse {
  bool success = 1;
  string message = 2;
  repeated Role roles = 3;
}

// CreateRole
message CreateRoleRequest {
  string name = 1;
  string description = 2;
}

message CreateRoleResponse {
  bool success = 1;
  string message = 2;
  Role role = 3;
}

// UpdateRole
message UpdateRoleRequest {
  Role role = 1;
}

message UpdateRoleResponse {
  bool success = 1;
  string message = 2;
  Role role = 3;
}

// DeleteRole
message DeleteRoleRequest {
  int32 id = 1;
}

message DeleteRoleResponse {
  bool success = 1;
  string message = 2;
}

// GetPermission
message GetPermissionRequest {
  int32 id = 1;
}

message GetPermissionResponse {
  bool success = 1;
  string message = 2;
  Permission permission = 3;
}

// GetAllPermissions
message GetAllPermissionsRequest {}

message GetAllPermissionsResponse {
  bool success = 1;
  string message = 2;
  repeated Permission permissions = 3;
}

// CreatePermission
message CreatePermissionRequest {
  string name = 1;
  string description = 2;
}

message CreatePermissionResponse {
  bool success = 1;
  string message = 2;
  Permission permission = 3;
}

// UpdatePermission
message UpdatePermissionRequest {
  Permission permission = 1;
}

message UpdatePermissionResponse {
  bool success = 1;
  string message = 2;
  Permission permission = 3;
}

// DeletePermission
message DeletePermissionRequest {
  int32 id = 1;
}

message DeletePermissionResponse {
  bool success = 1;
  string message = 2;
}

// GetRolePermissions
message GetRolePermissionsRequest {
  int32 role_id = 1;
}

message GetRolePermissionsResponse {
  bool success = 1;
  string message = 2;
  repeated Permission permissions = 3;
}

// AssignPermissionToRole
message AssignPermissionToRoleRequest {
  int32 role_id = 1;
  int32 permission_id = 2;
}

message AssignPermissionToRoleResponse {
  bool success = 1;
  string message = 2;
}

// RemovePermissionFromRole
message RemovePermissionFromRoleRequest {
  int32 role_id = 1;
  int32 permission_id = 2;
}

message RemovePermissionFromRoleResponse {
  bool success = 1;
  string message = 2;
}

// GetUserRoles
message GetUserRolesRequest {
  int32 user_id = 1;
}

message GetUserRolesResponse {
  bool success = 1;
  string message = 2;
  repeated Role roles = 3;
}

// GetUserPermissions
message GetUserPermissionsRequest {
  int32 user_id = 1;
}

message GetUserPermissionsResponse {
  bool success = 1;
  string message = 2;
  repeated Permission permissions = 3;
}